--- a/HTML/Lists/index.html
+++ b/HTML/Lists/index.html
@@ -110,6 +110,41 @@
         <dd>-It is a art which is produced by sculpting stone, metal or wood.</dd>
     </dl>
 
+    <p>Preceding Text</p>
+    <ol style="list-style-type: upper-roman; font-family: sans-serif;">
+        <li>List Item 1
+            <ol style="list-style-type: lower-alpha;">
+                <li>Nested Item 1.1</li>
+                <li>Nested Item 1.2</li>
+            </ol>
+        </li>
+        <li>List Item 2
+            <ol>
+                <li>Nested Item 2.1</li>
+                <li>Nested Item 2.2
+                    <ul style="list-style-type: circle;">
+                        <li>Nested Item 2.2.1</li>
+                        <li>Nested Item 2.2.2
+                            <ul>
+                                <li>Nested Item 2.2.2.1</li>
+                                <li>Nested Item 2.2.2.2</li>
+                            </ul>
+                        </li>
+                        <li>Nested Item 2.2.3</li>
+                    </ul>
+                </li>
+                <li>Nested Item 2.3</li>
+            </ol>
+        </li>
+        <li>List Item 3
+            <ul>
+                <li>Nested Item 3.1</li>
+                <li>Nested Item 3.2</li>
+                <li>Nested Item 3.3</li>
+            </ul>
+        </li>
+    </ol>
+
 </body>
 
 </html>
