--- a/HTML/Links And Images/index.html
+++ b/HTML/Links And Images/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Links</h1>
     <!-- Links -->
-    <!-- 
-    <a> => anchor
+    
+    <!-- <a> => anchor
     href => Hyper reference
     href/Style => Attribute
     jo tag close ni hota usy ham self closing tag kehten hai jese br hr img <a>
@@ -19,9 +19,9 @@
         alt = alternative
      -->
 
-    <!-- <a href="https://www.instagram.com/itx_umar_official01" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/itx_umar_official01" target="_blank">Instagram</a>
     <a href="https://www.facebook.com">Facebook</a>
-    <a href="https://www.github.com/umarprogrammer19">Github</a> -->
+    <a href="https://www.github.com/umarprogrammer19">Github</a>
 
     <a href="./about.html">About</a>
     <a href="./contact.html">Contact</a>
