--- a/HTML/Revision/index.html
+++ b/HTML/Revision/index.html
@@ -67,7 +67,7 @@
             <td>Introduction To XML</td>            
         </tr>
         <tr align="center">
-            <td>Validity DTD and Relac NG</td>
+            <td>Validity DTD and Relax NG</td>
         </tr>
         <tr align="center">
             <td rowspan="3">Tuesday</td>
